<resources>
    <string name="app_name">JekyllEx</string>
    <string name="website_url">https://jekyllex.xyz</string>
    <string name="docs_url">https://docs.jekyllex.xyz</string>
    <string name="gh_repo_url">https://github.com/jekyllex/jekyllex-android</string>
    <string name="issues_url">https://github.com/jekyllex/jekyllex-android/issues/new</string>
    <string name="com_auth0_domain">jekyllex.us.auth0.com</string>
    <string name="com_auth0_scheme">jekyllex</string>
    <string name="website">Website</string>
    <string name="github_repository">Github Repository</string>
    <string name="docs">JekyllEx Docs</string>
    <string name="share">Share JekyllEx</string>
    <string name="authenticate">Authenticate</string>
    <string name="login">Login</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="profile">Profile</string>
    <string name="loading_msg">Loading your repositories…</string>
    <string name="no_connection">No Internet Connection Available</string>
    <string name="retry">Retry</string>
    <string name="go_back">Go Back</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="markdown_editor">Markdown Editor</string>
    <string name="select_repo_message">
        Here\'s the list of your repositories, choose one or search
        for the repository that has your jekyll blog in it.
    </string>
    <string name="posts">Posts</string>
    <string name="login_msg">Please log-in with your GitHub account to start using JekyllEx</string>
    <string name="no_posts_found">No \"_posts\" folder found in this repository</string>
    <string name="editor_et_hint">Click here to start writing</string>
    <string name="preview">Preview Changes</string>
    <string name="edit_meta">Edit Meta Data</string>
    <string name="alert_et_msg">Add post\'s Meta-Data here…</string>
    <string name="save">Save</string>
    <string name="metadata_editor">Meta Data Editor</string>
    <string name="cancel">Cancel</string>
    <string name="upload_post">Upload Post</string>
    <string name="logout">Logout</string>
    <string name="commit_message">Commit Message</string>
    <string name="enter_commit_message">Enter Commit Message</string>
    <string name="upload">Upload</string>
    <string name="working">Working on it…</string>
    <string name="repo_private">Private</string>
    <string name="repo_archived">Archived</string>
    <string name="open_in_browser">Open in Browser</string>
    <string name="built_with"><![CDATA[Built with: <b>%1$s</b>.]]></string>
    <string name="file_size"><![CDATA[File size: <b>%1$s</b>.]]></string>
    <string name="written_on"><![CDATA[Written on: <b>%1$s</b>.]]></string>
    <string name="new_post">New Post</string>
    <string name="create">Create</string>
    <string name="enter_new_post_filename">Enter New Post\'s Filename</string>
    <string name="file_name_example"><![CDATA[Example:<br /><b>2021–08–22-my-awesome-post.md</b>]]></string>
    <string name="report_msg">Report a bug/issue</string>
    <string name="edit_file">Edit File</string>
    <string name="preview_changes">Preview Changes</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="email">Email</string>
    <string name="uid">uid: %1$s</string>
    <string name="refresh_profile">Refresh Profile</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="tnc">Terms and Conditions</string>
    <string name="share_text">
        Hey, Check out JekyllEx- The easiest way to manage your jekyll blog
        directly from your android device \n\n
        https://jekyllex.xyz
    </string>
    <string name="privacy_policy_text">
        <![CDATA[
Gourav Khunger built the JekyllEx app as an Open Source app.
This SERVICE is provided by Gourav Khunger at no cost and is intended for use as is.
\n\n
This page is used to inform visitors regarding my policies with the collection, use, and
disclosure of Personal Information if anyone decided to use my Service.
\n\n
If you choose to use my Service, then you agree to the collection and use of information
in relation to this policy. The Personal Information that I collect is used for providing and
improving the Service. I will not use or share your information with anyone except as described
in this Privacy Policy.
\n\n
The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions,
which is accessible at JekyllEx unless otherwise defined in this Privacy Policy.
\n\n
**Information Collection and Use**
\n\n
For a better experience, while using our Service, I may require you to provide us with certain
personally identifiable information. The information that I request will be retained on your
device and is not collected by me in any way.
\n\n
The app does use third party services that may collect information used to identify you.
\n\n
Link to privacy policy of third party service providers used by the app
\n\n
*   [Google Analytics for Firebase](https://firebase.google.com/policies/analytics) \n
*   [Firebase Crashlytics](https://firebase.google.com/support/privacy/)
\n\n
**Log Data**
\n\n
I want to inform you that whenever you use my Service, in a case of an error in the app I
collect data and information (through third party products) on your phone called Log Data.
\n\n
This Log Data may include information such as your device Internet Protocol (“IP”) address,
device name, operating system version, the configuration of the app when utilizing my Service,
the time and date of your use of the Service, and other statistics.
\n\n
**Cookies**
\n\n
Cookies are files with a small amount of data that are commonly used as anonymous unique
identifiers. These are sent to your browser from the websites that you visit and are stored
on your device\'s internal memory.
\n\n
This Service does not use these “cookies” explicitly. However, the app may use third party
code and libraries that use “cookies” to collect information and improve their services.
You have the option to either accept or refuse these cookies and know when a cookie is being sent
to your device. If you choose to refuse our cookies, you may not be able to use some portions of
this Service.
\n\n
**Service Providers**
\n\n
I may employ third-party companies and individuals due to the following reasons:
\n\n
*   To facilitate our Service; \n
*   To provide the Service on our behalf; \n
*   To perform Service-related services; or \n
*   To assist us in analyzing how our Service is used. \n
*   To provide the Service on our behalf; \n
\n
I want to inform users of this Service that these third parties have access to your Personal
Information. The reason is to perform the tasks assigned to them on our behalf. However, they
are obligated not to disclose or use the information for any other purpose.
\n\n
**Security**
\n\n
I value your trust in providing us your Personal Information, thus we are striving to use
commercially acceptable means of protecting it. But remember that no method of transmission
over the internet, or method of electronic storage is 100% secure and reliable, and I cannot
guarantee its absolute security.
\n\n
**Links to Other Sites**
\n\n
This Service may contain links to other sites. If you click on a third-party link, you will be
directed to that site. Note that these external sites are not operated by me.
Therefore, I strongly advise you to review the Privacy Policy of these websites.
I have no control over and assume no responsibility for the content, privacy policies,
or practices of any third-party sites or services.
\n\n
**Children’s Privacy**
\n\n
These Services do not address anyone under the age of 13. I do not knowingly collect personally
identifiable information from children under 13 years of age. In the case I discover that a
child under 13 has provided me with personal information, I immediately delete this from our
servers. If you are a parent or guardian and you are aware that your child has provided us with
personal information, please contact me so that I will be able to do necessary actions.
\n\n
**Changes to This Privacy Policy**
\n\n
I may update our Privacy Policy from time to time. Thus, you are advised to review this page
periodically for any changes. I will notify you of any changes by posting the new Privacy Policy
on this page.
\n\n
This policy is effective as of **2021-08-26**
\n\n
**Contact Us**
\n\n
If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me
at [gouravkhunger18@gmail.com](mailto:gouravkhunger18@gmail.com).
      ]]>
    </string>
    <string name="load_header">Repositories per page</string>
    <string name="load_summary">Number of github repositories to load per page</string>
    <string name="font_header">App Font</string>
    <string name="colour_header">Colour Settings</string>
    <string name="settings">Settings</string>
</resources>