<?xml version="1.0" encoding="utf-8"?>

<!--
 - MIT License
 -
 - Copyright (c) 2021 Gourav Khunger
 -
 - Permission is hereby granted, free of charge, to any person obtaining a copy
 - of this software and associated documentation files (the "Software"), to deal
 - in the Software without restriction, including without limitation the rights
 - to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 - copies of the Software, and to permit persons to whom the Software is
 - furnished to do so, subject to the following conditions:
 -
 - The above copyright notice and this permission notice shall be included in all
 - copies or substantial portions of the Software.
 -
 - THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 - IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 - FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 - AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 - LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 - OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 - SOFTWARE.
 -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/settings"
        android:title="@string/settings"/>

    <item
        android:id="@+id/website"
        android:title="@string/website"/>

    <item
        android:id="@+id/gh_repo"
        android:title="@string/github_repository"/>

    <item
        android:id="@+id/documentation"
        android:title="@string/docs"/>

    <item
        android:id="@+id/share"
        android:title="@string/share"/>

    <item
        android:id="@+id/privacyPolicy"
        android:title="@string/privacy_policy"/>

    <item
        android:id="@+id/tnc"
        android:title="@string/tnc"/>

</menu>