<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/no_connection"
        android:src="@drawable/not_found" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="24sp"
        android:textAlignment="center"
        android:text="@string/no_posts_found"/>

    <Button
        android:id="@+id/goBack"
        android:layout_marginTop="20dp"
        android:text="@string/go_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>